search page , solved the error in the context , edit scrollbar style for the categories list

--- a/app/globals.css
+++ b/app/globals.css
@@ -6,20 +6,15 @@
   height: 5px;
   width: 4px;
   border: 1px solid #d5d5d5;
+  border-radius: 20px;
 }
 
 .categories::-webkit-scrollbar-track {
-  border-radius: 0;
+  border-radius: 20px;
   background: #eeeeee;
 }
 
 .categories::-webkit-scrollbar-thumb {
-  border-radius: 0;
+  border-radius: 20px;
   background: #b0b0b0;
 }
-
-/* :where(.css-dev-only-do-not-override-14wwjjs).ant-input-search .ant-input:hover,
-:where(.css-dev-only-do-not-override-14wwjjs).ant-input-search
-  .ant-input:focus {
-  border-color: rgb(191, 191, 191);
-} */
